# django-glue

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTORS.md  INSTALLATION.md  LICENSE.md  MANIFEST.in  README.md  TODO.md  USAGE.md  babel.config.js  bunfig.toml  db.sqlite3  development_requirements.txt  jest.config.js  justfile  manage.py  mkdocs.yml  mkdocs_requirements.txt  package-lock.json  package.json  pseudo_code.js  psuedo_code.html  psuedo_code.py  pyproject.toml  requirements.txt  ruff.toml  run_coverage.py  seed.py  setup.ps1  setup.py  setup.sh  test.db  ty.toml
.claude/: settings.local.json
.dandy/recordings/: model_seeder_recording.html
.github/actions/linting/: action.yml
.github/actions/security/: action.yml
.github/actions/tests/: action.yml
.github/workflows/: ci.yml  publish.yml  publish_pypi_package.yml  run_tests.yml  security.yml  test.yml  uv_lock.yml
.run/: Run Server.run.xml  Run Tests.run.xml  watch.run.xml
archived_docs/: architecture.md  forms.md  index.md  logic_diagram.md  scope.md  terminology.md
archived_docs/about/: contributors.md
archived_docs/changelog/: archived_changelog.md
archived_docs/entities/model_object/: glue_model_object_field_design_doc.md
archived_docs/form/: glue_form_field_design_doc.md
archived_docs/handler/: handler_design_doc.md
archived_docs/session/: glue_session_design_doc.md
archived_docs/static/css/: extra.css
archived_docs/templates/: main.html
archived_example/: context_data.py  settings.py  urls.py  utils.py  validators.py  views.py
archived_example/templates/base/: base.html
client_js/: glue.js
client_js/builds/: cdn.js  module.js
client_js/scripts/: build.js
client_js/src/: client.js  config.js  constants.js  glue.js  http.js  manager.js  utils.js
client_js/tests/: client.test.js  config.test.js  http.test.js  setup.js  testUtils.js
django_glue/: __init__.py  admin.py  classes.py  conf.py  constants.py  context_processors.py  data_classes.py  data_transfer_objects.py  decorators.py  encoders.py  enums.py  exceptions.py  glue.py  handlers.py  handlers_OLD.py  json.py  mangers.py  maps.py  middleware.py  models.py  responses.py  session.py  sessions.py  settings.py  shortcuts.py  tags.py  types.py  urls.py  utils.py  views.py  views_ajax.py
django_glue/access/: access.py  actions.py  decorators.py  enums.py
django_glue/adapters/: __init__.py  base.py  decorators.py  utils.py
django_glue/core/: utils.py
django_glue/entities/: base_entity.py  post_data.py
django_glue/form/: enums.py  factories.py  fields.py  html_attrs.py  maps.py  utils.py
django_glue/glue/: __init__.py  base.py  decorators.py  enums.py  glue.py  post_data.py  session_data.py  utils.py
django_glue/handler/: body.py  body_data.py  data.py  enums.py  handlers.py  maps.py  utils.py
django_glue/migrations/: 0001_initial.py
django_glue/old/: __init__.py  decorators.py  middleware.py  urls.py  utils.py
django_glue/proxies/: __init__.py  decorators.py  mixins.py  proxy.py  utils.py
django_glue/response/: data.py  entities.py  enums.py  responses.py
django_glue/services/: __init__.py  functions.py  model_objects.py  query_sets.py  services.py  templates.py
django_glue/session/: __init__.py  data.py  enums.py  glue_session.py  keep_alive_session.py  keep_live_session.py  session.py
django_glue/templates/: glue_js.html  javascript.html
django_glue/templatetags/: django_glue.py  glue_config.py  json.py  string_formating.py  utils.py  variable_types.py
django_glue/test/: test.py
django_glue/tests/: conftest.py  settings.py  test_core.py  test_exceptions.py  urls.py
docs/: components.md  index.md  interview.md  naming.md  scope.md  sequence_diagram.md
docs/about/: contributors.md
docs/access/: access_design_doc.md  design_doc.md
docs/changelog/: archived_changelog.md  changelog.md  v1_changelog.md
docs/entities/: glue_entity_design_doc.md  glue_function_design_document.md
docs/form/: glue_form_field_design_doc.md
docs/getting_started/: installation.md
docs/guides/: function_glue.md  glue_char_fields.md  introduction.md  model_object_glue.md  query_set_glue.md  viewglue.md
docs/handler/: design_doc.md
docs/response/: response_design_document.md
docs/roadmap/: roadmap.md  roadmap_2026.md
eval/: 2026-02-20.md  2026-02-21.md  2026-02-22.md
example/system/: settings.py  wsgi.py
examples/: manage.py  test.db  wsgi.py
examples/static/: examples.js
examples/system/: base_settings.py  settings.py
test_example/: admin.py  manage.py  urls.py  utils.py  views.py  wsgi.py
test_example/migrations/: 0001_initial.py  0003_testmodel_email_testmodel_personality_type_and_more.py  0007_testmodel_best_friend.py
test_project/: asgi.py  base_settings.py  dandy_settings.py  seed.py  settings.py  urls.py  wsgi.py
test_project/.seeding_generator_output/: gorilla_seeder.py
test_project/comments/: apps.py  models.py  urls.py  views.py
test_project/developer/: apps.py
test_project/docs/: planning.md
test_project/fight/: admin.py  apps.py  choices.py  forms.py  models.py  urls.py  views.py
test_project/glue/: apps.py  forms.py  models.py  querysets.py
test_project/gorilla/: apps.py  choices.py  forms.py  models.py  urls.py  views.py
test_project/lab/: apps.py  urls.py  views.py
test_project/system/: dandy_settings.py  settings.py  urls.py  wsgi.py
test_project/task/: apps.py  forms.py  models.py  views.py
test_project/templates/: base.html  detail_page.html  nav.html  page.html
tests/: fields.py  forms.py  manage.py  models.py  processors.py  settings.py  test_base.py  test_core.py  test_django_glue.py  test_functions.py  test_views.py  urls.py  utils.py  views.py  widgets.py
tests/live_server/: test_base_live_server.py
tests/migrations/: 0001_initial.py  0002_bigtestmodel_foreign_key_alter_testmodel_birth_date.py  0004_testmodel_likes_to_party_and_more.py  0005_testmodel_bed_time.py  0006_uuidtestmodel_alter_testmodel_bed_time.py
tests/session/: test_session.py
tests/static/: tests.css  tests.js
tests/templates/: base.html  no_glue.html  test.html
(+851 files in other folders)
