[project]
name = "django-glue"
description = "Industrial Strength Glue for Django Backends and Frontends!"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE.md", content-type = "text/markdown" }
authors = [
    { name = "Austin Sauer", email = "austins@stratusadv.com" },
    { name = "Nathan Johnson", email = "nathanj@stratusadv.com" },
]
keywords = ["django", "glue", "backend", "frontend", "javascript", "active server pages"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3",
    "Framework :: Django :: 4",
    "Framework :: Django :: 5",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: JavaScript",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.11"
dynamic = ["version"]

dependencies = [
    "django>=5",
]

[project.optional-dependencies]
development = [
    "pyright",
    "twine",
    "build",
    "setuptools",
    "wheel",
    "playwright",
    "django-spire==0.14.0",
]

documentation = [
    "mkdocs",
    "markdown-exec[ansi]",
    "mkdocs-include-markdown-plugin",
    "mkdocs-material",
    "mkdocs-table-reader-plugin",
    "mkdocstrings-python",
    "openpyxl",
]

[project.urls]
Homepage = "https://django-glue.stratusadv.com"
Documentation = "https://django-glue.stratusadv.com"
Repository = "https://github.com/stratusadv/django-glue"
Changelog = "https://django-glue.stratusadv.com/changelog/changelog/"

[build-system]
requires = [
    "setuptools>=45",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.pyright]
pythonVersion = "3.11"

[tool.setuptools.dynamic]
version = { attr = "django_glue.constants.__VERSION__" }

[tool.setuptools.packages.find]
include = ["django_glue*"]

[tool.setuptools.package-data]
django_glue = [
    "**/*.html",
    "**/*.js",
    "**/*.css",
]

[tool.dev_tool.unittest.django]
settings = "test_project.system.settings"
