[project]
name = "django-glue"
description = "Industrial Strength Glue for Django Backends and Frontends!"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE.md", content-type = "text/markdown" }
authors = [
    { name = "Austin Sauer", email = "austins@stratusadv.com" },
    { name = "Nathan Johnson", email = "nathanj@stratusadv.com" },
]
keywords = ["django", "glue", "backend", "frontend", "javascript", "active server pages"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3",
    "Framework :: Django :: 4",
    "Framework :: Django :: 5",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: JavaScript",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.11"
dynamic = ["version"]

dependencies = [
    "django>=5",
    "pydantic",
]

[project.optional-dependencies]
development = [
    "pyright",
    "twine",
    "build",
    "setuptools",
    "wheel",
    "playwright",
    "faker>=18.0.0",
    "python-dotenv==1.2.1",
    "pytest>=7.0.0",
    "pytest-django>=4.5.0",
    "pytest-cov>=4.0.0",
]

documentation = [
    "mkdocs",
    "markdown-exec[ansi]",
    "mkdocs-include-markdown-plugin",
    "mkdocs-material",
    "mkdocs-table-reader-plugin",
    "mkdocstrings-python",
    "openpyxl",
]

[project.urls]
Homepage = "https://django-glue.stratusadv.com"
Documentation = "https://django-glue.stratusadv.com"
Repository = "https://github.com/stratusadv/django-glue"
Changelog = "https://django-glue.stratusadv.com/changelog/changelog/"

[build-system]
requires = [
    "setuptools>=45",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.pyright]
pythonVersion = "3.11"

[tool.dev_tool]
port = 5745
containerized = true
single-instance = true

[tool.setuptools.dynamic]
version = { attr = "django_glue.constants.__VERSION__" }

[tool.setuptools.packages.find]
include = ["django_glue*"]

[tool.setuptools.package-data]
django_glue = [
    "**/*.html",
    "**/*.js",
    "**/*.css",
]

[tool.dev_tool.unittest.django]
apps = ["."]
settings = "test_project.base_settings"

[tool.dev_tool.unittest.python]
apps = ["django_glue.tests"]

#[tool.pytest.ini_options]
#DJANGO_SETTINGS_MODULE = "test_project.base_settings"
#python_files = ["test_*.py", "*_test.py"]
#python_functions = ["test_*"]
#testpaths = ["django_glue/tests"]
#addopts = [
#    "--strict-markers",
#    "-v",
#]

[tool.coverage.run]
source = ["django_glue"]
omit = [
    "*/migrations/*",
    "*/__init__.py",
    "*/constants.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
fail_under = 70
show_missing = true
